[tool.poetry]
name = "block-bot"
version = "0.1.0"
description = ""
authors = ["Dean McRobie <dean.mcrobie@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.0"
"discord.py" = "^1.7.3"
mcstatus = "^6.5.0"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
